Fixed navagation bar bug on mobile

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -84,6 +84,9 @@
     display: flex;
   }
 
+  .navbar.scrolled {
+    background-color: rgba(0, 0, 0);
+  }
   .nav-links {
     position: fixed;
     top: 0;
